@@ -1,7 +1,21 @@
 # DungeonMasters
 ## By: Jonathan Abrams, Madison Pope, Martha Emerson
+
+## Library Setup
+[JavaFX SDK](https://gluonhq.com/products/javafx/) content of `lib` directory for your platform into `lib/javafx`
+
+`--module-path lib/javafx --add-modules javafx.controls,javafx.fxml` into VM Options of run configuration in IDEA
+
+### Place these in root of project directory
+SQLiteDB Driver: https://github.com/xerial/sqlite-jdbc/releases/download/3.43.2.2/sqlite-jdbc-3.43.2.2.jar
+
+SQLite Logger: https://search.maven.org/remotecontent?filepath=org/slf4j/slf4j-api/1.7.36/slf4j-api-1.7.36.jar
+
 ## Iteration 1
 For this iteration, the team worked on setup up, review, and implementing the model class for our dungeon adventure project. Issues of note include time restrictions and communication. Going forward we plan on meeting every Tuesday and Thursday to touchbase and keep on track. Currently, we do not have any working software to show off. 
 
 ## Iteration 2
 For this iteration, the team worked on writing user stories and restructuring project tasks, learning to use JavaFX, and further development, implementation, and testing of classes for our project. A major issue was the need to rewrite our user stories to represent the user (or more specifically, player) perspective. Fortunately, we were able to nest many of the tasks produced last week under these new user stories. We don't yet have working software to present.
+
+## Iteration 3
+For this iteration, the team worked on designing the dungeon levels and layout, began to implement JavaFX, and completed the monster user story. A major issue was that two team members became ill with the flu, and so our progress was somewhat slower this week. We are pretty close to having working software to present.
